@@ -38,6 +38,7 @@ proftpd-dfsg (1.3.5a-2) UNRELEASED; urgency=medium
     - call dh_auto_clean instead of manual "make distclean"
     - replace some install calls by entries in $package.install files
     - remove "-l option" from dh_shlibdeps call
+    - install init script and defaults file using dh_installinit
 
   [1] https://lists.debian.org/debian-devel-announce/2016/11/msg00001.html
 
